<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.driverRegister.ActivityDriverRegisterOne"
    android:background="@drawable/twofondo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGoDriverTwo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Registro Conductor"
        android:theme="@style/ToolbarTheme"/>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenidaConductor"
            android:textAlignment="center"
            android:layout_margin="60dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registroConductor"
            android:textAlignment="center"
            android:layout_margin="40dp"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/imageViewSelected"
            android:src="@drawable/user"
            android:layout_gravity="center"
            android:background="#BDBBBB"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/fotoPerfil" />

        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="wrap_content"
            android:text='@string/fotoPerfil'
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_obligatorio"
            android:textAlignment="center"
            android:textColor="#FF3535"
            android:textSize="15sp" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerDriverTwo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/siguiente"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>