<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.driverRegister.ActivityDriverRegisterTen"
    android:background="@drawable/fondologo1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGoDriverEleven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        app:title=""
        app:titleTextColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/senorConductor"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textSize="45sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/VALIDATION"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="400dp"
                android:layout_height="250dp"
                android:background="@drawable/fondologo1"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logofin" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/VALIDATION2"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/RegisterDriverEleven"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"/>




</androidx.coordinatorlayout.widget.CoordinatorLayout>