<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logIn.ActivityLogInClientCompany"
    android:background="@drawable/twofondo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGoClientOrCompany"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Inicia Sesión Empresa"
        android:theme="@style/ToolbarTheme"/>

    <LinearLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:backgroundTint="#6AE2D4C9"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp"
            android:layout_margin="40dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logofin"
                android:layout_gravity="center"/>

        </androidx.cardview.widget.CardView>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundColor="#00FF0000"
            app:boxStrokeColor="#00FF0000"
            app:boxStrokeWidth="0dp"
            app:endIconTint="#131313"
            app:hintTextColor="#101010"
            app:startIconTint="#323232">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edit_text"
                android:hint="@string/ingreseUsuario"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:boxBackgroundColor="#00FF0000"
            app:boxStrokeColor="#00FF0000"
            app:boxStrokeWidth="0dp"
            app:hintTextColor="#101010">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edit_text"
                android:hint="@string/ingreseContrasena"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogInCompany"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/iniciarSesion"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/RegisterCompany"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/registrate"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>